--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> INNOBODY-SYSTEMS </title>
+    <title> INNOBODY SYSTEMS </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -369,8 +369,8 @@
                                     <div class="footer-pera">
                                         <p class="info1">Corporate Office : DK-2 /412/23, Danish Kunj, Kolar Road. Bhopal. M.P. 462042</p>
                                             <p class="info1">Branch Office : LG-43, Mangal City Mall, Indore. M.P</p>
-                                            <p class="info1">Phone : +91 9522122133,  +91 9522122144</p>
-                                            <p class="info1">Email : care@innomitra.com innomitra@gmail.com</p>
+                                            <p class="info1">Phone : +91 9522122133<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+91 9522122144</p>
+                                            <p class="info1">Email : care@innomitra.com <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;innomitra@gmail.com</p>
                                             
                                     </div>
                                 </div>
