--- a/brands.html
+++ b/brands.html
@@ -321,7 +321,7 @@
         <article class="blog_item">
             <div class="blog_item_img">
                 <img class="card-img rounded-0" src="assets/img/blog/single_blog_5.jpg" alt="">
-                <a href="#" class="blog_item_date">
+                <!-- <a href="#" class="blog_item_date"> -->
                     <h3></h3>
                     <p></p>
                 </a>
