--- a/about.html
+++ b/about.html
@@ -392,8 +392,8 @@
                                         <p class="info1">Phone : +91 9522122133<br>
                                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+91
                                             9522122144</p>
-                                        <p class="info1">Email : care@innomitra.com
-                                            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;innomitra@gmail.com
+                                        <p class="info1">Email : care@innobodysystems.com
+                                            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;innomitra@gmail.com
                                         </p>
 
                                     </div>
