--- a/contact.html
+++ b/contact.html
@@ -236,7 +236,7 @@
                                     <p class="info1">Corporate Office : DK-2 /412/23, Danish Kunj, Kolar Road. Bhopal. M.P. 462042</p>
                                             <p class="info1">Branch Office : LG-43, Mangal City Mall, Indore. M.P</p>
                                             <p class="info1">Phone : +91 9522122133<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+91 9522122144</p>
-                                            <p class="info1">Email : care@innomitra.com <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;innomitra@gmail.com</p>
+                                            <p class="info1">Email : care@innobodysystems.com <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;innomitra@gmail.com</p>
                                 </div>
                             </div>
                         </div>
