--- a/about.html
+++ b/about.html
@@ -377,7 +377,7 @@
                                 <!-- logo -->
                                 <div class="footer-logo">
                                     <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""
-                                            style="max-width: 100%; height: auto;">></a>
+                                            style="max-width: 100%; height: auto;"></a>
                                 </div>
                             </div>
                         </div>
