--- a/brands.html
+++ b/brands.html
@@ -106,10 +106,10 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="section-tittle text-center mb-100">
-                            <span>Our Service Brand</span>
-                            <h2>InnoMitra</h2>
+                            <span>Our Service Brand</span><br>
+                            <h2>InnoMitra</h2><br><br>
                             <span>Our Product Based Brand</span>
-                            <h2>InnoPhyzio</h2>
+                            <h2>InnoPhyzio</h2><br>
                             <h2>InnoVedik</h2>
                         </div>
                     </div>
@@ -373,7 +373,7 @@
                                 <!-- logo -->
                                 <div class="footer-logo">
                                     <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""
-                                            style="max-width: 100%; height: auto;">></a>
+                                            style="max-width: 100%; height: auto;"></a>
                                 </div>>
                             </div>
                         </div>
