--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <div class="single-footer-caption mb-50">
                                 <!-- logo -->
                                 <div class="footer-logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt="" style="max-width: 100%; height: auto;">></a>
+                                    <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt="" style="max-width: 100%; height: auto;"></a>
                                 </div>
                             </div>
                         </div>
