--- a/brands.html
+++ b/brands.html
@@ -294,7 +294,7 @@
         <center>
             <div class="blog_details">
                 <a class="d-inline-block" href="blog_details.html">
-                    <h2 class="blog-head" style="color: #2d2d2d;">Innomitra - Smart Companion For
+                    <h2 class="blog-head" style="color: #c51e1e;">Innomitra - Smart Companion For
                         Elder care</h2>
                 </a>
                 <p>Innomitra is revolutionizing elder healthcare by transforming
@@ -329,7 +329,7 @@
             <center>
                 <div class="blog_details">
                     <a class="d-inline-block" href="blog_details.html">
-                        <h2 class="blog-head" style="color: #2d2d2d;">InnoPhyzio - The Posture
+                        <h2 class="blog-head" style="color: #3f2bc3;">InnoPhyzio - The Posture
                             Physiotherapy Experts </h2>
                     </a>
                     <p>InnoPhyzio was launched in January 2023 by Innobody Systems,
@@ -347,8 +347,7 @@
                 </div>
                 <div class="blog_details">
                     <a class="d-inline-block" href="blog_details.html">
-                        <h2 class="blog-head" style="color: #2d2d2d;">InnoVedik - The Posture
-                            Physiotherapy Experts </h2>
+                        <h2 class="blog-head" style="color: #0ca42d;">InnoVedik - Modern Science Validating Ancient Medicine </h2>
                     </a>
                     <p>InnoVedik joins the ancient principles of Ayurvedic medicine with the latest scientific technology
                         <br> to provide the highest quality herbal supplements available. Ayurveda literally means "The
