brands.html changed

--- a/brands.html
+++ b/brands.html
@@ -107,10 +107,10 @@
                     <div class="col-lg-12">
                         <div class="section-tittle text-center mb-100">
                             <span>Our Service Brand</span><br>
-                            <h2>InnoMitra</h2><br><br>
+                            <h2 style="color: red;">Inno-Mitra</h2><br><br>
                             <span>Our Product Based Brand</span>
-                            <h2>InnoPhyzio</h2><br>
-                            <h2>InnoVedik</h2>
+                            <h2 style="color: #3f2bc3;">Inno-Phyzio</h2><br>
+                            <h2 style="color: #2dc04d;">Inno-Vedik</h2>
                         </div>
                     </div>
                 </div>
